2003-06-06   Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* HScrollBar.cs
	* ScrollBar.cs
	* VScrollBar.cs
	* win32Enums.cs : started implementation of scrollbar classes

2003-06-06   Aleksey Ryabchuk <ryabchuk@yahoo.com>
        * Form.cs : MaximumSize, MinimumSize, TopMost were implemented, small fixes and improvements
	* win32Structs.cs: WINDOWPOS structure

2003-06-05   Aleksey Ryabchuk <ryabchuk@yahoo.com>
        * Form.cs : ControlBox, HelpButton, MaximizeBox, MinimizeBox, maximumSize
	* win32Structs.cs: MINMAXINFO structure

2003-06-04   Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs
	* Form.cs   : KeyPreview, ShowInTaskBar

2003-06-02 Alexandre Pigolkine <pigolkine@gmx.de>
	* Application.cs
	* ComboBox.cs
	* Control.cs
				change to ContainsFocus/Focused properties
			
2003-04-25  Miguel de Icaza  <miguel@ximian.com>

        * SystemInformation.cs (ComputerName): Bug fix: we need to trim down the size

2003-05-30  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* GroupBox.cs : take BackColor into account

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : helper method getParentForm
	* Form.cs : ActiveForm , FormBorderStyle implemented
	* GroupBox.cs : some chages in drawing code, don't register another window class
	* FormBorderStyle.cs : fixed typo
	* win32functions.cs : UpdateWindowExStyle added, new prototypes for GetActiveWindow, GetForegroundWindow

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
        * Button.cs
	* CheckBox.cs
	* CheckedListBox.cs
	* ComboBox.cs
	* HScrollBar.cs
	* ListBox.cs
	* ListView.cs
	* PrintPreviewControl.cs
	* RichTextBox.cs
	* ScrollBar.cs
	* Splitter.cs
	* ToolBar.cs
	* TreeView.cs
	* VScrollBar.cs : changed to use base implementation of CreateParams

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : implemented GetChildIndex, BringToFront, UpdateZOrder, update z-order when recreating handle,
	* win32Strcuts.cs
	* win32Enums.cs : use ansi CharSet for tooltips
			