@@ -1,3 +1,9 @@
+2003-06-07   Alexandre Pigolkine <pigolkine@gmx.de>
+	* Control.cs
+	* Form.cs
+	* ScrollableControl.cs
+			DockStyle.None & AnchorStyles
+
 2003-06-06   Aleksey Ryabchuk <ryabchuk@yahoo.com>
 	* HScrollBar.cs
 	* ScrollBar.cs
